# movieapp

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
LICENCES/: LICENSE-chrono  LICENSE-diesel  LICENSE-dotenvy  LICENSE-rusqlite
doc/: database.sql
migrations/2024-11-09-164411_create_table/: down.sql  up.sql
migrations/2024-11-09-182646_add_test_data/: up.sql
src/: app.rs  constants.rs  lib.rs  main.rs  schema.rs
src/db/: connection.rs  mod.rs  model.rs  query.rs  schema.rs  view.rs
src/model/: data.rs  schema.rs
src/view/: mod.rs  rate_movie.rs  work_list.rs
tests/: test_create_db.rs
