[package]
name = "movieapp"
version = "0.1.0"
authors = ["Antti Hakkarainen"]
edition = "2021"
include = ["LICENSE", "**/*.rs", "Cargo.toml"]

[dependencies]
egui = "0.29.1"
eframe = { version = "0.29.1", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    # "persistence",   # Enable restoring app state when restarting the app.
] }

# Rust-sqlite is a simple SQLite database wrapper.
rusqlite = { version = "0.32.1", features = ["bundled"] }

# Diesel for ORM (Object-Relational Mapping) and migrations.
diesel = { version = "2.2.4", features = ["sqlite"] }

# Parses .env files
dotenvy = "0.15.7"
chrono = "0.4.38"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70" # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


